# laife

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  mkdocs.yml  nokeys.env  plan.md  pyproject.toml  ruff.toml
.github/: copilot-instructions.md
.github/agents/: draft-to-plan.agent.md
.github/workflows/: docs.yml
docs/: README.md  standards.md
docs/guides/: README.md  architecture.md  docs_maintenance.md  game_loop.md  getting_started.md  glossary.md  llm_chains.md  params_config.md
game/: main.py
scratch_space/10_mission_nested/: README.md
scratch_space/11_world_render_split/: 01_folder_refactor.md  README.md
scratch_space/12_action_structure/: README.md  discriminator_test.ipynb
scratch_space/13_player_brain/: README.md
scratch_space/14_dataclass_check/: README.md
scratch_space/15_building_gen/: README.md
scratch_space/16_vectorable_entities/: README.md
scratch_space/17_configurable_vectorstore/: README.md
scratch_space/18_move_delta_loop/: README.md
scratch_space/19_world_mission_controller/: 01_streamline_classes.md  README.md
scratch_space/20_player_deep_planner/: README.md
scratch_space/21_world_map_observation/: README.md
scratch_space/22_mission_step_runner/: 01_review.md  README.md
scratch_space/22_player_inventory/: README.md
scratch_space/23_typed_world_response/: README.md
scratch_space/24_player_interaction/: README.md  strategy2_upgrade.md
scratch_space/25_mission_lifecycle/: README.md
scratch_space/26_mission_assignment/: README.md
scratch_space/27_terrain_entity/: README.md
scratch_space/28_structured_logger/: README.md
scratch_space/29_world_request_helper/: README.md
scratch_space/30_merge_action_focus_complete/: README.md
scratch_space/31_utensil_crafting/: README.md
scratch_space/32_observability/: 00-start.md  01_struct_log_analysis.md  02_textual_tui.md  03_loop_pause.md  README.md  tracking.md
scratch_space/async_/: sample1.py
scratch_space/embed_/: sample.ipynb
scratch_space/entities_/: action_pick.ipynb  mission_sample.ipynb  mission_sample.py  tool_.py  utensil_.py
scratch_space/game/: agent_loop.py  mini_loop.py  world_loop.py
scratch_space/graph_/: sample01.py
scratch_space/llm/: ollama_.py
scratch_space/llm_/: chroma_.py  ollama_.ipynb  ollama_.py  ollama_async.py  ollama_base_async.py  openai_.ipynb
scratch_space/llm_services_/: 01_chat_.ipynb  02_embeddings_.ipynb
scratch_space/rebirth_/: 01.1_integrate_open_source.md  01_llm_layer.md  README.md
src/laife/: __init__.py
src/laife/agents/: player.py
src/laife/config/: chat_openai.py  constants.py  lc_embeddings.py  types.py
src/laife/data_models/: __init__.py  basemodel_kwargs.py
src/laife/embed/: sentence_transformer_embeddings.py  utils.py
src/laife/entities/: __init__.py  action.py  player.py  (+19 more)
tests/: test_constants.py
tests/config/: test_constants.py  test_env_vars.py
tests/entities/: test_directions.py  test_mission_step_runner.py  test_move_delta.py  test_player_interaction.py  test_player_inventory.py  test_player_lifecycle.py  test_terrain.py  test_vectorable.py  test_world_judge.py  test_world_map_observation.py
tests/llm/: test_cond.py  test_mission_generator.py  test_mission_lifecycle.py  test_player_brain.py  test_player_planner.py  test_prompt_loader.py  test_structured_chain.py
tests/meta/: test_logger.py
tests/ui/: test_directions.py
(+58 files in other folders)
