[project]
name = "laife"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.3",
    "langchain>=0.2.12",
    "langchain-chroma>=0.1.3",
    "langchain-community>=0.2.11",
    "langchain-ollama>=0.1.1",
    "langchain-openai>=0.1.20",
    "langgraph>=0.2.27",
    "loguru>=0.7.2",
    "pygame>=2.6.0",
    "pysqlite3-binary>=0.5.3.post1",
    "rich>=13.9.2",
    "sentence-transformers>=3.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/laife"]

[dependency-groups]
dev = [
    { include-group = "lint" },
    { include-group = "notebook" },
    { include-group = "test" },
]
lint = [
    "ruff>=0.9.6",
]
notebook = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.3",
    "rich>=13.9.2",
]
test = [
    "pytest>=8.3.2",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
# remember to adjust include paths as needed (eg scripts folder)
include = ["src", "tests"]
