[project]
name = "laife"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = "==3.14.*"
dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.3",
    "langgraph>=0.2.27",
    "llm-core[all] @ git+https://github.com/Pitrified/llm-core@v0.2.2",
    "loguru>=0.7.2",
    "pygame>=2.6.0",
    "pysqlite3-binary>=0.5.3.post1",
    "rich>=13.9.2",
    "transformers>=4.57.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/laife"]

[dependency-groups]
dev = [
    { include-group = "docs" },
    { include-group = "lint" },
    { include-group = "notebook" },
    { include-group = "test" },
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26",
    "mkdocs-api-autonav>=0.2",
]
lint = [
    "ruff>=0.9.6",
    "pyright>=1.1.408",
]
notebook = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.3",
    "rich>=13.9.2",
]
test = [
    "pytest>=8.3.2",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
# remember to adjust include paths as needed (eg scripts folder)
include = ["src", "tests"]
